--- a/SVO/source/SVO.vcxproj.filters
+++ b/SVO/source/SVO.vcxproj.filters
@@ -19,4 +19,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="VertexShader.vs" />
+    <None Include="PixelShader.ps" />
+  </ItemGroup>
 </Project>
