--- a/SVO/source/SVO.vcxproj.filters
+++ b/SVO/source/SVO.vcxproj.filters
@@ -18,9 +18,23 @@
     <ClCompile Include="SVO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ImGuiBackend\imgui_impl_dx11.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ImGuiBackend\imgui_impl_sdl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="VertexShader.vs" />
     <None Include="PixelShader.ps" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ImGuiBackend\imgui_impl_dx11.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ImGuiBackend\imgui_impl_sdl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
