--- a/SVO/source/SVO.vcxproj
+++ b/SVO/source/SVO.vcxproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="ImGuiBackend\imgui_impl_dx11.cpp" />
     <ClCompile Include="ImGuiBackend\imgui_impl_sdl.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="SVO.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -170,6 +171,7 @@
   <ItemGroup>
     <ClInclude Include="ImGuiBackend\imgui_impl_dx11.h" />
     <ClInclude Include="ImGuiBackend\imgui_impl_sdl.h" />
+    <ClInclude Include="SVO.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
