--- a/SVO/source/SVO.vcxproj.filters
+++ b/SVO/source/SVO.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="renderdoc_app.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
